# devse-chan

./: .gitignore  Makefile.am  README.md  config.yaml.example  configure.ac  devsechan.py  requirements.txt  run.py
.github/workflows/: codeql-analysis.yml
devse-agents/: Makefile.am
devse-agents/discord/: Cargo.toml  Makefile.am
devse-agents/discord/src/: main.rs
devse-agents/irc/: Makefile.am  config.c  irc-agent.cfg  irc.h  main.c
devse-core/: Makefile.am  devse-core.cfg  main.c
devse-irc-agent/: main.c
devsechan/: __init__.py  __main__.py  avatar.py  discord.py  irc.py  requirements.txt
devsechan/irc/: __init__.py  channel.py
devsechan/utils/: distance.py  user.py  version.py
lib/: Makefile.am  logger.c  logger.h
lib/protocol/: register.proto
po/: Makevars  POTFILES.in  fr.po
